refactor!: Redo parsing to improve perf and reduce mem usage (#22)